1694 - fixes nav spacing issue

--- a/app/javascript/frontend/styles/_common.scss
+++ b/app/javascript/frontend/styles/_common.scss
@@ -237,15 +237,13 @@ h4,
   img {
     height: 40px;
   }
+}
 
-  .navbar-collapse {
-    justify-content: flex-end;
-
-    a {
-      font-weight: $font-weight-bold;
-    }
+.navbar-collapse {
+  align-self: start;
+  a {
+    font-weight: $font-weight-bold;
   }
-
 }
 
 .navbar-brand {
